# PonziLand

./: .gitignore  Cargo.toml  Dockerfile  GAMEJAM.md  devenv.nix  devenv.yaml  readme.md
.github/workflows/: ci.yaml  client-cloudflare.yaml  client-formatting.yaml  contracts-formatting.yaml  contracts-test.yaml  deploy-cloudflare.yaml  formatting.yaml  images.yaml  rust.yaml  tests.yaml
.sqlx/: query-18aa056526db319f9b61ceae93690c29b1d92324931df4a53ba1dd9f69186e78.json  query-2cd077c47ff5feeda10ab3971b62deda52c17dd7172cffcdb20c9bc32885dfc3.json  query-372d4e3274237d64ac2a48b9447d4c0c6a3bb9816d5e001799e2fe4efe86b724.json  query-47dc85556a139337fab6c88eb7b38f7f3cd621f5b023a87d8d8a986c29397e08.json  query-7bc5c2b203a6d6c78deeeb64beb2c88629f98c4bdee355e84cf47cdf638304a8.json  query-8419b6d8c86143376f1daa9ab5dbfe7f696197737700f6f9e5124ae04cc9b3a7.json  query-8d429527c98e7bf1ba58790278c1e2a0bca980f09c414c6d9af9d71fbcef262e.json  query-9bb68daa32f2e2d0cde2da59171056e066f42fd4771b206ba17552fa8d3ccfdf.json  query-d4c740eea7667732d9de6b51c993db0a1fc07e4e328ec0895c25f6d7e3370eee.json  query-d5bb7a167369560d2ede85f48de248ff664291c38713b49fe5cd61a609a82500.json  query-d5c14f9f818fbbeae790f505d36b91dcdbedcf8aabea90a040938cc00d2898d4.json  query-d7e705329f0ba0a6a27164dc70acf30917c65ef5bf3aa92a90bf99d24c4eec58.json  query-f6c51b385505770157e2e6bdd668e3d3be9da7e06f0ea9643944584d7472fb9a.json
client/: .gitignore  .npmrc  .prettierrc  bun.lockb  components.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  wrangler.jsonc  wrangler.toml
client/_hack/: preset.json
client/data/: mainnet.json  sepolia.json
client/src/: app.css  app.html  hooks.server.ts
client/src/lib/: account.svelte.ts  const.ts  contracts.gen.ts  data.json  dojoConfig.ts  interfaces.ts  models.gen.ts  sfx.ts  stores.ts  utils.ts  zustandToSvelte.ts
client/src/routes/: +layout.svelte  +page.svelte
client/static/sheets/: cars.psd
contracts/: .gitignore  .tool-versions  DEVELOPMENT.MD  Scarb.toml  dojo_dev.toml  dojo_mainnet-test.toml  dojo_mainnet.toml  dojo_sepolia.toml  manifest_dev.json  manifest_mainnet-test.json  manifest_mainnet.json  manifest_sepolia.json  slot-torii.toml  torii-mainnet-test.toml  torii-mainnet.toml  torii-sepolia.toml
contracts/bindings/typescript/: contracts.gen.ts  models.gen.ts
contracts/scripts/: deploy-mainnet.sh  deploy-sepolia.sh  land_convert
contracts/src/: consts.cairo  lib.cairo  store.cairo
contracts/src/components/: payable.cairo  stake.cairo  taxes.cairo
contracts/src/helpers/: circle_expansion.cairo  coord.cairo  taxes.cairo
contracts/src/interfaces/: systems.cairo
contracts/src/mocks/: ekubo_core.cairo  erc20.cairo
contracts/src/models/: auction.cairo  land.cairo
crates/chaindata/service/: Cargo.toml
crates/chaindata/service/src/: lib.rs
crates/chaindata/service/src/models/: event.rs  macros.rs  mod.rs  model.rs  model_repository.rs  types.rs
crates/chaindata/service/src/models/actions/: auction_finished.rs  bought.rs  mod.rs  new_auction.rs  nuked.rs  remaining_stake.rs
crates/chaindata/service/src/models/auction/: mod.rs
crates/chaindata/service/src/models/auth/: address_authorized.rs  address_removed.rs  mod.rs  verifier_updated.rs
crates/chaindata/service/src/models/entities/: mod.rs
crates/chaindata/service/src/models/land/: land.rs  land_stake.rs
crates/chaindata/service/src/models/shared/: location.rs  mod.rs
crates/chaindata/service/src/repositories/: event.rs  land.rs  land_stake.rs  mod.rs
crates/chaindata/service/src/tasks/: event_listener.rs  mod.rs  model_listener.rs
crates/ekubo/: Cargo.toml
crates/ekubo/examples/: get_price.rs
crates/ekubo/src/: lib.rs  price.rs
crates/ekubo/src/api/: pool.rs
crates/ekubo/src/contract/: mod.rs  pool_price.rs
crates/ekubo/src/math/: u256fd128.rs
crates/indexer/: Cargo.toml  build.rs  config.toml
crates/indexer/examples/: test.rs
crates/indexer/src/: config.rs  main.rs  state.rs
crates/indexer/src/monitoring/: apalis.rs  mod.rs
crates/indexer/src/routes/: mod.rs
crates/indexer/src/routes/price/: mod.rs
crates/indexer/src/routes/tokens/: mod.rs
crates/indexer/src/service/: ekubo.rs  token.rs
crates/indexer/src/worker/: mod.rs
crates/migrations/: Cargo.toml  main.rs
crates/torii-ingester/: Cargo.toml
crates/torii-ingester/examples/: test.rs
crates/torii-ingester/src/: conversions.rs  error.rs  lib.rs  macros.rs  prelude.rs  torii_client.rs  torii_sql.rs  u256.rs
crates/torii-ingester/src/models/: mod.rs  models.rs
crates/torii-ingester/src/models/actions/: auction_finished.rs  bought.rs  new_auction.rs  nuked.rs  remaining_stake.rs
crates/torii-ingester/src/models/auth/: address_authorized.rs  address_removed.rs  verifier_updated.rs
crates/torii-ingester/src/models/shared/: event_print.rs  location.rs  macros.rs  mod.rs  u256.rs
notification-service/: Cargo.toml  README.md
notification-service/src/: main.rs
notification-service/src/torii/: mod.rs  models.rs
playtest/: Scarb.toml  bun.lockb  deploy.sh  package.json  results.ts  script.ts  setup.ts  tokens.json  tokens.mainnet-test.json  tokens.mainnet.json  tokens.sepolia.json
playtest/scripts/: account.ts  env.ts  utils.ts
playtest/src/: granter.cairo  lib.cairo
(+408 files in other folders)
