[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
ekubo_sdk = "0.1.20"
starknet = "0.14.0"
thiserror = "2.0.12"
tokio = "1"
trait-variant = "0.1.2"
uint = "0.10.0"
reqwest = "0.12.15"
serde = "1.0.219"
url = "2.5.4"
mockito = "1.7.0"
axum = "0.8.3"
tracing = "0.1.41"
confique = "0.3.0"
tracing-subscriber = "0.3.19"
