[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
apalis = { version = "0.7.0", features = ["tracing", "retry"] }
apalis-cron = "0.7.0"
# We need to add websocket support
axum = { workspace = true, features = ["ws"] }
confique = { workspace = true, features = ["toml"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7.14"
tracing.workspace = true
tracing-subscriber.workspace = true
