[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
apalis = { version = "0.7.0", features = [
    "tracing",
    "catch-panic",
    "retry",
    "limit",
    "prometheus",
] }
chrono = "0.4.40"
apalis-cron = "0.7.0"
# We need to add websocket support
axum = { workspace = true, features = ["ws", "macros"] }
confique = { workspace = true, features = ["toml"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7.14"
tracing.workspace = true
tracing-subscriber.workspace = true
metrics-exporter-prometheus = "0.16.2"
apalis-core = "0.7.0"
tower = "0.5.2"
anyhow = "1.0.98"
ekubo = { path = "../ekubo" }
url = { workspace = true, features = ["serde"] }
starknet.workspace = true
arc-swap = "1.7.1"
metrics = "0.24.1"
pin-project-lite = "0.2.16"
