[package]
name = "chaindata-service"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
starknet.workspace = true
serde = { workspace = true, features = ["derive"] }
torii-ingester = { path = "../../torii-ingester" }
tokio.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "derive",
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "bigdecimal",
] }
chrono.workspace = true
uuid = { workspace = true, features = ["serde"] }
async-trait = "0.1.88"
num-bigint = "0.4.6"
num-traits = "0.2.19"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
tracing.workspace = true
serde-aux = "4.7.0"
thiserror.workspace = true
migrations = { path = "../../migrations" }
